<resources>
    <string name="app_name">Nicotine Calculator</string>
    <string name="nicshot">NicShot</string>
    <string name="recipes">Recipes</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="result">Result</string>
    <string name="calculate">Calculate</string>
    <string name="amount_of_e_liquid_with_0_nicotine">Amount of E-liquid (in ml) with Nicotine (in ml) you want to make</string>
    <string name="concentrated_nicotine_strength">Concentrated Nicotine Strength (in mg)</string>
    <string name="desired_strength">Desired Strength (in mg)</string>
    <string name="if_you_like_my_work_please_make_a_donation_in_paypal">If you like my work please make a donation in paypal</string>
    <string name="simple_calculate_your_desired_strength_of_nicotine_for_your_vapor_e_liquid">Simple calculate your desired Strength of nicotine for your vapor E-liquid</string>
    <string name="all_my_projects_on_github">All my projects on GitHub</string>
    <string name="totalamountisempty">Total Amount is empty…</string>
    <string name="concentratednicotineisempty">Concentrated Nicotine Strength is empty…</string>
    <string name="desirestreghtisempty">Desired Strength is empty…</string>
    <string name="deleterecipe">Delete Recipe</string>
    <string name="cancel">Cancel</string>
    <string name="ofnicotine">Nicotine (in ml)</string>
    <string name="ofeliquid">ml e-liquid</string>
    <string name="recipesaved">Recipe saved!</string>
    <string name="warning">Warning!</string>
    <string name="ofjuice">of juice (in ml) +</string>
    <string name="SUCCESS">Success!</string>
</resources>